--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.7.5-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 16 Oct 2006 13:05:53 -0600
+
 cl-sql (3.7.4-1) unstable; urgency=low
 
   * New upstream
