--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+30 Nov 2006  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.7.8
+	* db-sqlite3/sqlite3-sql.lisp: Commit patch from Edi Weitz fixing
+	error display
+
 16 Oct 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 3.7.7
 	* db-postgresql/postgresql-sql.lisp: Remove 
