--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.7.8-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 30 Nov 2006 20:09:12 -0700
+
 cl-sql (3.7.7-1) unstable; urgency=low
 
   * New upstream
