--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.7.9-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 28 Dec 2006 11:07:05 -0700
+
 cl-sql (3.7.8-1) unstable; urgency=low
 
   * New upstream
