--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,11 @@
+Dec 30 2006
+-----------
+Version 3.8.0 released with incompatible backward change. See
+the ChangeLog entry for details.
+
+
+Aug 3 2006
+----------
 CLSQL 3.0 has been released. The 3.0 release of CLSQL is a major
 rewrite compared to version 2.0. New features include:
 
