--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+17 Jan 2007  Kevin Rosenberg <kevin@rosenberg.net>
+	* db-mysql/Makefile: Add potential mysql directories
+
 31 Dec 2006  Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/metaclasses.lisp: Remove usused saved-initargs
 	* clsql.asd: Also check ~/.clsql-init.lisp at load-time (usually used to
