--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+25 Jan 2007  Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/pool.lisp: Test pooled connection when popped from
+	the pool to ensure the connection still works. Currently, implemented
+	only for MySQL.
+
 17 Jan 2007  Kevin Rosenberg <kevin@rosenberg.net>
 	* db-mysql/Makefile: Add potential mysql directories
 
