--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
-25 Jan 2007  Kevin Rosenberg <kevin@rosenberg.net>
+26 Jan 2007  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 3.8.1
 	* sql/pool.lisp: Test pooled connection when popped from
 	the pool to ensure the connection still works. Currently, implemented
 	only for MySQL.
