--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.8.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 26 Jan 2007 08:30:28 -0700
+
 cl-sql (3.8.0-1) unstable; urgency=low
 
   * New upstream
