--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+17 Jun 2007  Kevin Rosenberg <kevin@rosenberg.net>
+	* db-mysql/mysql-loader.lisp: Do not bother loading libmysqlclient since
+	that library is dymically linked to clsql-mysql library. Thus, the mysql
+	library will be automatically loaded.
+
 29 May 2007  Kevin Rosenberg <kevin@rosenberg.net>
 	* tests/test-fddl.lisp: Add :order-by for :fddl/big/1 as
 	reported by Ricardo Boccato Alves
