--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.8.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 20 Jul 2007 17:17:32 -0600
+
 cl-sql (3.8.5-2) unstable; urgency=low
 
   * debian/watch: New version
