--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,6 @@
 cl-sql (3.8.6.1-2) unstable; urgency=low
 
-  * debian/control: Tighten version dependencies. Convert source:Version to 
-  binary:Version for any-to-any dependencies. Revert changes in 3.8.6.1-1
+  * debian/control: Tighten version dependencies. Revert changes in 3.8.6.1-1
   (closes:434358)
 
  -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 23 Jul 2007 11:59:21 -0600
