--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,14 @@
+cl-sql (3.8.6.1-3) unstable; urgency=low
+
+  * debian/control: actually use the binary:Version for any-to-any dependencies
+  (closes:434812)
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 26 Jul 2007 16:55:29 -0600
+
 cl-sql (3.8.6.1-2) unstable; urgency=low
 
-  * debian/control: Tighten version dependencies. Revert changes in 3.8.6.1-1
+  * debian/control: Tighten version dependencies. Convert source:Version to
+  binary:Version for any-to-any dependencies. Revert changes in 3.8.6.1-1
   (closes:434358)
 
  -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 23 Jul 2007 11:59:21 -0600
