--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (3.8.6.1-4) unstable; urgency=low
+
+  * make package binNMU safe (closes:435968)
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 28 Aug 2007 08:40:23 -0600
+
 cl-sql (3.8.6.1-3) unstable; urgency=low
 
   * debian/control: actually use the binary:Version for any-to-any dependencies
