--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (4.0.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 17 Sep 2007 08:53:42 -0600
+
 cl-sql (4.0.0-1) unstable; urgency=low
 
   * New upstream
