--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+02 Jun 2009  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 4.0.5
+	* sql/database.lisp: Add process-lock for deleting database from
+	a pool (thanks to Ralf Mattes).
+	
 25 Feb 2008  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 4.0.4
 	* sql/expressions.lisp: Remove stray form (thanks to Samuel Ward)
