Update changelog for recent changes

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cl-sql (4.0.5-1) unstable; urgency=low
+
+  * New upstream version
+  * Change build dependency to be independent of libmysqlclient version (closes:538459)
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 26 Jul 2009 17:30:19 -0600
+
 cl-sql (4.0.4-1) unstable; urgency=low
 
   * Update Oracle FFI based on changes in CLSQL. Thanks to Paul
