--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (4.0.5-2) unstable; urgency=low
+
+  * Change section from devel to lisp
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sun, 26 Jul 2009 20:28:14 -0600
+
 cl-sql (4.0.5-1) unstable; urgency=low
 
   * New upstream version
