--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+cl-sql (4.0.5-4) unstable; urgency=low
+
+  * debian/control:
+    - Add Vcs-Browser field
+    - Convert to dh-lisp
+  * debian/rules:
+    - Simplify install rules utilizing more debhelper functions
+    - Convert to dh-lisp
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Tue, 04 Aug 2009 02:21:14 -0600
+
 cl-sql (4.0.5-3) unstable; urgency=low
 
   * control: Update debhelper compat to 7, add Homepage and Vgs-Git
