--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (4.0.6-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Mon, 31 Aug 2009 14:36:30 -0600
+
 cl-sql (4.0.5-5) unstable; urgency=low
 
   * debian/rules: Fix bug introduced by change to dh-lisp (closes:540816)
