--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 31 Aug 2009  Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/db-interface.lisp: Fix spelling error (thanks to 
+	David Thompson)
+	
+31 Aug 2009  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 4.1.0
 	* db-mysql/mysql-{sql,api}.lisp,db-mysql/clsql_mysql.c:
 	Latest version of mysqlclient once again changed the C
