--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* sql/fdml.lisp: Rework do-query to use supplied database
 	parameter when passed a sql-object-query 
 	(thanks to JTK <jetmonk@gmail.com>)
+	* sql/generic-postgresql.lisp: Allow optional connect
+	parameters for postgresql databases (thanks to Stephen Compall)
 
 31 Aug 2009  Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/db-interface.lisp: Fix spelling error (thanks to 
