Have database-type default be *default-database-type*

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,8 @@
 	Fix transposed letters (thanks to Stephen Compall)
 	* db-mysql/Makefile: Add directory for MacPorts mysql5 port
 	(thanks to Stephen Compall)
+	* sql/database.lisp: Have database-type default be
+	*default-database-type* (thanks to Desmond O. Chang)
 
 31 Aug 2009  Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/db-interface.lisp: Fix spelling error (thanks to
