--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 04 Sep 2009  Kevin Rosenberg <kevin@rosenberg.net>
+	* Version 4.1.1
 	* sql/fdml.lisp: Rework do-query to use supplied database
 	parameter when passed a sql-object-query
 	(thanks to JTK <jetmonk@gmail.com>)
