--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (4.1.1-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Fri, 04 Sep 2009 13:02:14 -0600
+
 cl-sql (4.1.0-1) unstable; urgency=low
 
   * New upstream
