--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 10 Dec 2009  Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/time.lisp: Patch from Oleg Tihonov to SYNTAX-PARSE-ISO-8601
+	to properly parse fractions of seconds.
+
+10 Dec 2009  Kevin Rosenberg <kevin@rosenberg.net>
 	* sql/time.lisp: Patch from Oleg Tihonov to roll function
 	to properly use USEC argument.
 
