--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,8 @@
 28 Jan 2009  Kevin Rosenberg <kevin@rosenberg.net>
+	* db-mysql/Makefile: Add directory for Fedora 11/12 on 64-bit
+	platform (Thanks to Michael Pheasant) and remove a 32-bit directory
+
+28 Jan 2009  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 4.3.1
 	* sql/utils.lisp: Ensure Lispworks 6 lock is created in sharing mode
 
