--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (4.3.2-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 28 Jan 2010 18:36:06 -0700
+
 cl-sql (4.3.1-1) unstable; urgency=low
 
   * New upstream
