--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+29 Jan 2009  Kevin Rosenberg <kevin@rosenberg.net>
+	* sql/oodml.lisp: Fix for UPDATE-RECORD-FROM-SLOTS for normalized
+	view classes
+
 28 Jan 2009  Kevin Rosenberg <kevin@rosenberg.net>
 	* Version 4.3.2
 	* Change "normalise" from British spelling for consistency with
